<resources>
    <string name="app_name">KikeOu</string>
    <string name="qr_code_image">Image QR Code</string>
    <string name="share">Partager</string>
    <string name="permissionToGrant">Camera</string>

    <!-- NavBar -->
    <string name="search">Rechercher</string>
    <string name="generate_qr_code">Ajouter</string>
    <string name="scan_qr_code">Scanner</string>

    <!-- Form (generate) -->
    <string name="name">Nom</string>
    <string name="email">E-mail</string>
    <string name="phone">Téléphone</string>
    <string name="planning">Calendrier hebdomadaire</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="morning">Matin</string>
    <string name="afternoon">Après-midi</string>
    <string name="generate">Générer QR code</string>

    <!-- Form (search) -->
    <string name="key">Veuillez saisir un mot de recherche</string>

    <!-- Layout (Camera) -->
    <string name="close_fragment">Close Fragment</string>

    <!--  -->
    <string-array name="weekly_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
    </string-array>
</resources>