<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="generate.GenerateQrCode">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_column="0" />
        <EditText
            android:id="@+id/name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/name"
            android:labelFor="@+id/nameLabel" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_column="0" />
        <EditText
            android:id="@+id/email"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:labelFor="@+id/emailLabel" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_column="0" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="phone"
            android:hint="@string/phone"
            android:labelFor="@+id/phoneLabel" />
    </TableRow>
    <TextView
        android:id="@+id/planning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/planning"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/mondayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:layout_column="0" />
        <EditText
            android:id="@+id/monday"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="text"
            android:labelFor="@+id/mondayLabel"
            android:hint="@string/monday"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tuesdayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:layout_column="0" />
        <EditText
            android:id="@+id/tuesday"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="text"
            android:labelFor="@+id/tuesdayLabel"
            android:hint="@string/tuesday"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/wednesdayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:layout_column="0" />
        <EditText
            android:id="@+id/wednesday"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="text"
            android:labelFor="@+id/wednesdayLabel"
            android:hint="@string/wednesday" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/thursdayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:layout_column="0" />
        <EditText
            android:id="@+id/thursday"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="text"
            android:labelFor="@+id/thursdayLabel"
            android:hint="@string/thursday" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/fridayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:layout_column="0" />
        <EditText
            android:id="@+id/friday"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:inputType="text"
            android:labelFor="@+id/fridayLabel"
            android:hint="@string/friday" />


    </TableRow>
    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/generate" />
</TableLayout>