<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="day"
            type="fr.enssat.kikeou.thomas_bricaud.generate.GenerateQrCodeModel" />
    </data>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/label_monday"
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/monday"
                android:layout_column="0" />
            <EditText
                android:id="@+id/monday"
                android:layout_width="@integer/default_width"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:inputType="text"
                android:labelFor="@+id/label_monday"/>

            <TextView
                android:id="@+id/label_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/tuesday"
                android:layout_column="3" />
            <EditText
                android:id="@+id/tuesday"
                android:layout_width="@integer/default_width"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_weight="1"
                android:inputType="text"
                android:labelFor="@+id/label_tuesday"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/label_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/wednesday"
                android:layout_column="0" />
            <EditText
                android:id="@+id/wednesday"
                android:layout_width="@integer/default_width"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:inputType="text"
                android:labelFor="@+id/label_wednesday"/>

            <TextView
                android:id="@+id/label_thursday"
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/thursday"
                android:layout_column="3" />
            <EditText
                android:id="@+id/thursday"
                android:layout_width="@integer/default_width"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_weight="1"
                android:inputType="text"
                android:labelFor="@+id/label_thursday"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/label_friday"
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/friday"
                android:layout_column="0" />
            <EditText
                android:id="@+id/friday"
                android:layout_width="@integer/default_width"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:inputType="text"
                android:labelFor="@+id/label_friday"/>

            <TextView
                android:id="@+id/label_saturday"
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/saturday"
                android:layout_column="3" />
            <EditText
                android:id="@+id/saturday"
                android:layout_width="@integer/default_width"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_weight="1"
                android:inputType="text"
                android:labelFor="@+id/label_saturday"/>
        </TableRow>

    </TableLayout>
</layout>
