<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="information"
            type="fr.enssat.kikeou.thomas_bricaud.search.SearchModel" />
    </data>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/name"
                android:layout_column="0" />
            <TextView
                android:id="@+id/name"
                android:layout_width="@integer/default_width"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/email"
                android:layout_column="0" />
            <TextView
                android:id="@+id/email"
                android:layout_width="@integer/default_width"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/label_phone"
                android:layout_width="wrap_content"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:text="@string/phone"
                android:layout_column="0" />
            <TextView
                android:id="@+id/phone"
                android:layout_width="@integer/default_width"
                android:layout_height="@integer/default_height"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
</layout>
